--- a/blur/frontend/templates/index.html
+++ b/blur/frontend/templates/index.html
@@ -23,99 +23,55 @@
             </a>
         </div>
     </nav>
+
     {% if not error and not image %}
-    <div class="container col-8 mb-4">
-        <h1 class="text-center border border-2 border-info bg-info-subtle mb-4 rounded-4 p-3">
-            Final ML Project, AAA
-        </h1>
-        {% endif %}
-    </div>
+    <table width="100%" cellpadding="10">
+    <tr>
+        <td align="center">
+            <h1>Face Blur Service</h1>
+        </td>
+    </tr>
+    </table>
+    {% endif %}
 
     {% if error %}
     <div class="container col-8 text-center mb-4">
         <div class="alert alert-danger text-danger-emphasis border rounded-3">
-            {{ error }}
+            Не получилось :( {{ error }}
         </div>
     </div>
     {% endif %}
 
     {% if image %}
     <div class="container col-8 text-center mb-4">
-        <img src="{{ image }}" class="rounded-3 img-fluid">
+        <img src="{{ image }}" class="rounded-3 img-fluid" width="50%" height="50%">
     </div>
     {% endif %}
 
     <div class="container col-8 mb-4">
-        <!-- <div class="container col-8 mb-4 p-4 bg-light border rounded-4"> -->
-        <form class="border mb-2 p-3 bg-light border rounded-4">
+        <form class="border mb-2 p-3 bg-light border rounded-4" method="post" action="" enctype="multipart/form-data">
             <div class="mb-3">
-                <label for="formFile" class="form-label">Upload your image to blur faces</label>
+                <label for="formFile" class="form-label">Загрузите фото .jpg для обработки лиц на нем</label>
                 <input type="file" class="form-control" id="formFile" name="image">
             </div>
-            <!-- <div class="form-check mb-3">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-                <label class="form-check-label" for="flexCheckChecked">
-                    Blur face?
-                </label>
-            </div> -->
-            <button type="submit" class="btn btn-primary">Process</button>
+            <button type="submit" class="btn btn-primary">Обработать изображение</button>
         </form>
-        <!-- </div> -->
     </div>
-
-    <!-- <div class="container col-8 mb-4">
-        <div class="alert alert-secondary text-center">
-            Your processed image is here:
-        </div>
-    </div> -->
-    {% if processed_image and not error %}
-    <div class="container col-8 mb-4">
-        <div class="card text-center bg-light border-0">
-            <div class="card-body">
-                <h5 class="card-title text-primary">
-                    <i class="bi bi-image"></i> Your processed image is here:
-                </h5>
-            </div>
-        </div>
-    </div>
-    {% elif error %}
-    <div class="container col-8 mb-4">
-        <div class="card text-center bg-light border-0">
-            <div class="card-body">
-                <h5 class="card-title text-danger">
-                    <i class="bi bi-image"></i> There was an error processing the image
-                </h5>
-            </div>
-        </div>
-    </div>
-    {% else %}
-    <div class="container col-8 mb-4">
-        <div class="card text-center bg-light border-0">
-            <div class="card-body">
-                <h5 class="card-title text-primary">
-                    <i class="bi bi-image"></i> Your processed image will be here
-                </h5>
-            </div>
-        </div>
-    </div>
-    {% endif %}
-
 
     {% if processed_image and not error %}
     <div class="container col-8 text-center mb-4">
-        <img src="{{ processed_image }}" class="rounded-3 img-fluid">
+        <img src="{{ processed_image }}" class="rounded-3 img-fluid" width="50%" height="50%">
     </div>
     {% endif %}
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
     <footer class="container mt-5">
         <div class="container col-8 text-center mb-4">
             <div class="container col-8 mb-4 p-3 rounded-4 border-success bg-success-subtle text-center">
-                <a class="link-opacity-75" href="https://github.com/rmusbuss/AAA-ML-Blur-Project">GitHub Project
-                    Link</a>
+                <a class="link-opacity-75" href="https://github.com/rmusbuss/AAA-ML-Blur-Project">GitHub проекта</a>
             </div>
         </div>
         <p class="text-center text-muted">© 2024 Академия Аналитиков Авито</p>
